--- a/index.html
+++ b/index.html
@@ -129,15 +129,19 @@
 
             window.searchResults = searchResults;
             const lastUpdatedAtDate = new Date(lastUpdatedAt);
-            const hoursSinceLastUpdated = Math.floor(
-              (lastUpdatedAtDate - Date.now()) / 1000 / 60 / 60
+            const minutesSinceLastUpdated = Math.ceil(
+              (lastUpdatedAtDate - Date.now()) / 1000 / 60
             );
             document.getElementById(
               "lastUpdatedAt"
-            ).innerText = `${lastUpdatedAtDate.toLocaleString()} (${enRelativeTimeFormat.format(
-              hoursSinceLastUpdated,
-              "hour"
-            )})`;
+            ).innerText = `${lastUpdatedAtDate.toLocaleString()} (${
+              minutesSinceLastUpdated >= 90
+                ? enRelativeTimeFormat.format(
+                    Math.ceil(minutesSinceLastUpdated / 60),
+                    "hour"
+                  )
+                : enRelativeTimeFormat.format(minutesSinceLastUpdated, "minute")
+            })`;
             document.getElementById("mainFilter").innerText = mainFilter
               .toString()
               .split("\n")
